[package]
name = "auxin"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["std-mutex"]
std-mutex = []

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
#Protocol buffers for our application.
auxin_protos = { path = "../auxin_protos" }

aes-gcm = { version = "0.9.2", features = ["std"] }
base64 = "0.13.0"
bincode = "1.3.3"
block-modes = "0.9.1"
block-padding = "0.3.2"
custom_error = "1.9.2"
futures = "0.3.15"
hex = { version = "0.4.3", features = ["std", "serde"] }
hkdf = "0.12.3"
http = "0.2.4"
#Signal protocol & zero knowledge proofs
libsignal-protocol = { git = "https://github.com/signalapp/libsignal-client", tag = "v0.14.0"}
log = "0.4.14"
mime_guess = "2.0.3"
num_enum = "0.5.1"
protobuf = "3.1.0"
rand = "0.8.5"
ring = { version = "0.16", features = ["std"] }
sanitize-filename = "0.4.0"
sha2 = "0.10.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_arrays = "0.1.0"
serde_json = "1.0.64"
thiserror = "1.0"
uuid = { version = "1.1.2", features = ["serde"] }
x509-certificate = "0.14.0"
zkgroup = { git = "https://github.com/signalapp/zkgroup", tag = "v0.9.0" }

[dev-dependencies]
uuid = { version = "1.1.2", features = ["v4"] }
