[package]
name = "auxin"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["std-mutex"]
# Are we able to use rust standard library's Mutex type? (i.e. are we not inside wasm)
std-mutex = []

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
aes-gcm = { version = "0.9.2", features = ["std"] }
#Internal dependency - protocol buffers for our application.
auxin_protos = { path = "../auxin_protos" }
base64 = "0.13.0"
bincode = "1.3.3"
block-modes = "0.8.1"
block-padding = "0.2.1"
custom_error = "1.9.2"
futures = "0.3.15"
hex = { version = "0.4.3", features = ["std", "serde"] }
hkdf = "0.11"
http = "0.2.4"
#Signal protocol & zero knowledge proof stuff.
libsignal-protocol = { git = "https://github.com/signalapp/libsignal", version = "0.1.0" }
log = "0.4.14"
mime_guess = "2.0.3"
num_enum = "0.5.1"
# Default-features disabled to ensure runtime-asyncstd is turned off.
# async-native-tls = { version = "0.3.3", default-features = false, features = ["runtime-tokio"]}
protobuf = "2.23.0"
rand = "0.7.3"
ring = { version = "0.16", features = ["std"] }
sanitize-filename = "0.3.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_arrays = "0.1.0"
serde_json = "1.0.64"
sha2 = "0.9.8"
thiserror = "1.0"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
x509-certificate = "0.2.0"
zkgroup = { git = "https://github.com/signalapp/libsignal", version = "0.9.0" }

[dev-dependencies]
uuid = { version = "1.1.2", features = ["v4"] }
