[package]
name = "auxin-cli"
version = "0.1.8"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
auxin_protos = { path = "../auxin_protos" }
auxin = { path = "../auxin" }

aes-gcm = { version = "0.9.2", features = ["std"] }
async-global-executor = { version = "2.0.2", features = ["tokio"] }

base64 = "0.13"

custom_error = "1.9.2"

env_logger = "0.9.0"

futures = "0.3.15"

http = "0.2.4"
httparse = "1.4.1"

hyper = { version = "0.14.9", features = ["full"] }
hyper-tls = "0.5.0"
hyper-multipart-rfc7578 = "0.5.1"

lazy_static = "1.4.0"
libsignal-protocol = { git = "https://github.com/signalapp/libsignal-client", tag = "v0.12.0"}
log = "0.4.14"

papyrus = { git = "https://github.com/forestcontact/papyrus", version = "0.17.3", optional = true }
protobuf = "2.24.1"

rand = "0.7.3"

serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

structopt = "0.3.25"

tracing = "0.1"
tracing-subscriber = "0.2.25"
tracing-futures = { version = "0.2.5", features = ["futures-03", "tokio"] }

tokio-native-tls = "0.3.0"
tokio = { version = "1.6.1", features = ["full"] }
tokio-tungstenite = { version = "0.14.0", features = ["native-tls"] }
tungstenite = { version = "0.13.0", features = ["native-tls"] }

uuid = { version = "0.8.2", features = ["serde", "v4"] }

x509-parser = "0.9.2"
x25519-dalek = "1.1.1"

zkgroup = { git = "https://github.com/signalapp/zkgroup", tag = "v0.9.0" }

[features]
default = []
repl = ["papyrus"]
