[package]
name = "auxin-cli"
version = "0.2.0"
edition = "2021"

[dependencies]
aes-gcm = { version = "0.9.2", features = ["std"] }
async-global-executor = { version = "2.0.2", features = ["tokio"] }
auxin = { path = "../auxin" }
auxin_protos = { path = "../auxin_protos" }
base64 = "0.13"
custom_error = "1.9.2"
env_logger = "0.9.0"
futures = "0.3.15"
http = "0.2.4"
httparse = "1.4.1"
hyper = { version = "0.14.9", features = ["full"] }
hyper-multipart-rfc7578 = "0.5.1"
hyper-tls = "0.5.0"
libsignal-protocol = { git = "https://github.com/signalapp/libsignal", version="0.1.0" }
log = "0.4.14"
protobuf = "2.24.1"
rand = "0.7.3"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.25"
thiserror = "1.0"
tokio = { version = "1.16.1", features = ["full"] }
tokio-native-tls = "0.3.0"
tokio-tungstenite = { version = "0.14.0", features = ["native-tls"] }
tracing = "0.1"
tracing-futures = { version = "0.2.5", features = ["futures-03", "tokio"] }
tracing-subscriber = "0.2.25"
tungstenite = { version = "0.13.0", features = ["native-tls"] }
uuid = "1.1.2"