[package]
name = "auxin_core"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["std-mutex"]
# Are we able to use rust standard library's Mutex type? (i.e. are we not inside wasm)
std-mutex = []

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]

#Internal dependency - protocol buffers for our application.
auxin_protos = { path = "../auxin_protos" }

#Signal protocol & zero knowledge proof stuff.
libsignal-protocol = { git = "https://github.com/signalapp/libsignal-client", tag = "v0.14.0"}
zkgroup = { git = "https://github.com/signalapp/zkgroup", tag = "v0.9.0" }

hkdf = "0.11"
sha2 = "0.9.8"

hex = { version = "0.4.3", features = ["std", "serde"] }
bincode = "1.3.3"

rand = "0.7.3"

base64 = "0.13.0"

uuid = { version = "0.8.2", features = ["serde"] }

aes-gcm = { version = "0.9.2", features = ["std"] }
block-modes = "0.8.1"
block-padding = "0.2.1"

log = "0.4.14"

serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
num_enum = "0.5.1"

# Default-features disabled to ensure runtime-asyncstd is turned off.
# async-native-tls = { version = "0.3.3", default-features = false, features = ["runtime-tokio"]}

protobuf = "2.23.0"

custom_error = "1.9.2"
http = "0.2.4"

x509-certificate = "0.2.0"
ring = { version = "0.16", features = ["std"] }
futures = "0.3.15"
sanitize-filename = "0.3.0"

mime_guess = "2.0.3"

thiserror = "1.0"

serde_arrays = "0.1.0"

[dev-dependencies]
uuid = { version = "0.8.2", features = ["v4"] }
