[package]
name = "auxin_protos"
version = "0.1.10"
edition = "2018"

[dependencies]
protobuf = "2.23.0"

serde = { version = "1.0.126", optional = true }

[features]
default = ["with-serde"]
with-serde = ["serde", "serde/derive", "protobuf/with-serde"]

[build-dependencies]
protobuf-codegen-pure = "2.23.0"